# AC-Trigger

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
resource/: resource.rc
